// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-line-items-provider renders 1`] = `
<ce-line-items-provider>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
</ce-line-items-provider>
`;

exports[`sc-line-items-provider renders 1`] = `
<sc-line-items-provider>
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
</sc-line-items-provider>
`;
